--- a/fonts/Yekan/style.css
+++ b/fonts/Yekan/style.css
@@ -1,22 +1,22 @@
 @font-face{
     font-family:Yekan;font-style:normal;font-weight:700;
-    src:url(/fonts/yekanwebbold.eot);
-    src:url(/fonts/yekanwebbold.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/yekanwebbold.woff2) format("woff2"),
-        url(/fonts/yekanwebbold.woff) format("woff"),
-        url(/fonts/yekanwebbold.ttf) format("truetype")}
+    src:url(yekanwebbold.eot);
+    src:url(yekanwebbold.eot?#iefix) format("embedded-opentype"),
+        url(yekanwebbold.woff2) format("woff2"),
+        url(yekanwebbold.woff) format("woff"),
+        url(yekanwebbold.ttf) format("truetype")}
 
 @font-face{font-family:Yekan;font-style:normal;font-weight:300;
-    src:url(/fonts/yekanweblight.eot);
-    src:url(/fonts/yekanweblight.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/yekanweblight.woff2) format("woff2"),
-        url(/fonts/yekanweblight.woff) format("woff"),
-        url(/fonts/yekanweblight.ttf) format("truetype")}
+    src:url(yekanweblight.eot);
+    src:url(yekanweblight.eot?#iefix) format("embedded-opentype"),
+        url(yekanweblight.woff2) format("woff2"),
+        url(yekanweblight.woff) format("woff"),
+        url(yekanweblight.ttf) format("truetype")}
 
 @font-face{font-family:Yekan;font-style:normal;font-weight:400;
-    src:url(/fonts/yekanwebregular.eot);
-    src:url(/fonts/yekanwebregular.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/yekanwebregular.woff2) format("woff2"),
-        url(/fonts/yekanwebregular.woff) format("woff"),
-        url(/fonts/yekanwebregular.ttf) format("truetype")
+    src:url(yekanwebregular.eot);
+    src:url(yekanwebregular.eot?#iefix) format("embedded-opentype"),
+        url(yekanwebregular.woff2) format("woff2"),
+        url(yekanwebregular.woff) format("woff"),
+        url(yekanwebregular.ttf) format("truetype")
 }
